# simple-websocket-chat

./: .gitignore  Makefile  README.md
backend/: .env  Cargo.toml  README.md
backend/migrations/: 20230624205109_add_users_and_push_endpoints.sql
backend/src/: main.rs  message_manager.rs  notification.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  manifest.json  service_worker.js  web_push_bridge.js
frontend/src/: chat_window.rs  main.rs  web_push.rs
