[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "macros"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.1", features = ["fs"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
web-push = "0.9.5"
base64 = "0.21.2"
serde = "1.0.164"
serde_json = "1.0.99"
ecdsa = { version = "0.16.7", features = ["serde"] }
k256 = { version = "0.13.1", features = ["jwk", "arithmetic"] }
anyhow = "1.0.71"
