[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
ecdsa = { version = "0.16.7", features = ["serde"] }
getrandom = { version = "0.2.10", features = ["js"] }
k256 = { version = "0.13.1", features = ["jwk", "arithmetic"] }
rand = "0.8.5"
reqwest = "0.11.18"
serde_json = "1.0.99"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = "0.20.0"
yew-hooks = "0.2.0"
